--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h3>Dev Jobs</h3>
                     <p>Web application developed to simulate a vacancy website for programmers.
                     </p>
-                    <a href="https://github.com/AbnerBittencourt/DevJobs">Read More</a>
+                    <a href="https://github.com/AbnerBittencourt/DevJobs" target="__blank">Read More</a>
                 </div>
             </div>
 
@@ -71,7 +71,7 @@
                     <p>Web application built with HTML, CSS and JavaScript, the proposal is a musical quiz with dynamic 
                         interactions.
                     </p>
-                    <a href="https://github.com/AbnerBittencourt/musicQuiz">Read More</a>
+                    <a href="https://github.com/AbnerBittencourt/musicQuiz" target="__blank">Read More</a>
                 </div>
             </div>
 
@@ -85,7 +85,7 @@
                     <h3>Hash Game</h3>
                     <p>Application developed for the purpose of practicing Javascript interactions with the DOM. 
                     </p>
-                    <a href="https://github.com/AbnerBittencourt/hashGame">Read More</a>
+                    <a href="https://github.com/AbnerBittencourt/hashGame" target="__blank">Read More</a>
                 </div>
             </div>
         </div>
@@ -120,13 +120,13 @@
             </div>
             <div id="links">
                 <ul class="links">
-                    <li><a href="https://www.instagram.com/abner.br/?hl=pt-br"><i class="fab fa-instagram"></i></a>
+                    <li><a href="https://www.instagram.com/abner.br/?hl=pt-br" target="__blank"><i class="fab fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/abner-bittencourt-rocha/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/abner-bittencourt-rocha/" target="__blank"><i class="fab fa-linkedin"></i></a>
                     </li>
                     <li>
-                        <a href="https://github.com/AbnerBittencourt"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/AbnerBittencourt" target="__blank"><i class="fab fa-github"></i></a>
                     </li>
                 </ul>
             </div>
