--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>Web application built with HTML, CSS and JavaScript, the proposal is a musical quiz with dynamic 
                         interactions.
                     </p>
-                    <a href="https://github.com/AbnerBittencourt/musicQuiz" target="__blank">Read More</a>
+                    <a href="https://music-quiz.vercel.app" target="__blank">Read More</a>
                 </div>
             </div>
 
@@ -85,7 +85,46 @@
                     <h3>Hash Game</h3>
                     <p>Application developed for the purpose of practicing Javascript interactions with the DOM. 
                     </p>
-                    <a href="https://github.com/AbnerBittencourt/hashGame" target="__blank">Read More</a>
+                    <a href="https://hash-game.vercel.app" target="__blank">Read More</a>
+                </div>
+            </div>
+            <div class="card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>04</h2>
+                    <h3>Bible Quiz</h3>
+                    <p>Web application developed during Alura's React V2 Immersion, where knowledge related to ReactJS and NextJS was discussed. 
+                    </p>
+                    <a href="https://quiz-biblico.vercel.app" target="__blank">Read More</a>
+                </div>
+            </div>
+            <div class="card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>05</h2>
+                    <h3>...</h3>
+                    <p>Future Projects 
+                    </p>
+                    <a href="" target="__blank">Read More</a>
+                </div>
+            </div>
+            <div class="card">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="content">
+                    <h2>05</h2>
+                    <h3>...</h3>
+                    <p>Future Projects 
+                    </p>
+                    <a href="" target="__blank">Read More</a>
                 </div>
             </div>
         </div>
