--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <input type="text" placeholder="Full name" id="name" required name="entry.2005620554">
                     <input type="email" placeholder="E-mail" id="email" required name="entry.1045781291">
                     <textarea placeholder="Your Message" required name="entry.839337160"> </textarea>
-                    <input type="submit">
+                    <input type="submit" value="Send">
                 </form>
             </div>
         </div>
