--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>  
                 <!--Update the URL for thank you page on form submit -->
                 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"      
-                    onload="if(submitted) {window.location='//portfolio.abnerbittencourt.vercel.app';}">
+                    onload="if(submitted) {window.location='//portfolio.abnerbittencourt.vercel.app'}">
                 </iframe> 
     
 
