--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="contentBx w50">
                 <h3>I'm a Web Developer Junior.</h3>
                 <p> I am graduating in the Computer Engineering course, in the 7th semester. I have basic command of English, however, in the process of studying the language for further improvement.<br> 
-                    I am currently studying web development using HTML, Css, Js and frameworks such as React and NextJS, looking to increasingly improve myself in these front-end technologies, but I also have contact with backend using NodeJs and MySQL.<br><br>
+                    I am currently studying web development using HTML, Css, Js, with libraries like React and frameworks like NextJS, looking to increasingly improve myself in these front-end technologies, but I also have contact with backend using NodeJs and MySQL.<br><br>
                     PT_BR=> Sou graduando no curso de Engenharia de Computação, no 7° semestre. Possuo domínio básico de inglês, porém, em processo de estudo da língua para uma posterior melhora. <br>
-                    Atualmente estudo desenvolvimento web utilizando HTML, Css, Js e frameworks como React e NextJS, buscando cada vez mais me aprimorar nestas tecnologias para front-end, mas também tenho contato com back-end utilizando NodeJs e MySQL.      
+                    Atualmente estudo desenvolvimento web utilizando HTML, Css, Js, com bibliotecas como React e frameworks como o NextJS, buscando cada vez mais me aprimorar nestas tecnologias para front-end, mas também tenho contato com back-end utilizando NodeJs e MySQL.      
                 </p>
             </div>
             <div class="w50">
