--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abner Bittencourt - Portfólio</title>
-    <link rel="icon" href="/img/favicon.png">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <script src="js/script.js" defer></script>
@@ -38,6 +38,8 @@
                     PT_BR=> Sou graduando no curso de Engenharia de Computação, no 7° semestre. Possuo domínio básico de inglês, porém, em processo de estudo da língua para uma posterior melhora. <br>
                     Atualmente estudo desenvolvimento web utilizando HTML, Css, Js, com bibliotecas como React e frameworks como o NextJS, buscando cada vez mais me aprimorar nestas tecnologias para front-end, mas também tenho contato com back-end utilizando NodeJs e MySQL.      
                 </p>
+                <a href="https://drive.google.com/file/d/1xloTIy98Bdbj4mNUhcyav5ygpHjddbFg/view?usp=sharing" target="__blank">Curriculum</a>
+                <a href="https://drive.google.com/drive/folders/1dO0Rv2O-jyYhEn9oiZPY8XOL7l_wPX3H?usp=sharing" target="__blank">Certificates</a>
             </div>
             <div class="w50">
                 <img src="img/img.jpg" class="img">
@@ -109,10 +111,11 @@
                 <span></span>
                 <div class="content">
                     <h2>05</h2>
-                    <h3>...</h3>
-                    <p>Future Projects 
+                    <h3 style="font-size: 1.6em" >CRUD for<br>E-commerce</h3>
+                    <p>
+                        This project and basically consists of a register of products with the possibility of creating, reading, updating and deleting (CRUD).
                     </p>
-                    <a href="" target="__blank">Read More</a>
+                    <a href="https://github.com/AbnerBittencourt/CRUD_E-commerce" target="__blank">Read More</a>
                 </div>
             </div>
             <div class="card">
