--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
         <div class="content">
             <div class="contentBx w50">
                 <h3>I'm a Web Developer Junior.</h3>
-                <p> I am graduating in the Computer Engineering course, in the 7th semester. I have basic command of English, however, in the process of studying the language for further improvement.<br> 
-                    I am currently studying web development using HTML, Css, Js, with libraries like React and frameworks like Angular and NextJS, looking to increasingly improve myself in these front-end technologies, but I also have contact with backend using NodeJs and MySQL.<br><br>
-                    PT_BR=> Sou graduando no curso de Engenharia de Computação, no 7° semestre. Possuo domínio básico de inglês, porém, em processo de estudo da língua para uma posterior melhora. <br>
-                    Atualmente estudo desenvolvimento web utilizando HTML, Css, Js, com bibliotecas como React e frameworks como o Angular e o NextJS, buscando cada vez mais me aprimorar nestas tecnologias para front-end, mas também tenho contato com back-end utilizando NodeJs e MySQL.      
+                <p> 1+ year of experience in front end development, my passion is deliver the best solutions and more value to each software and project I participate. I'm a continuous learning professional, looking to improve my skills on what's new in software development. Always over delivering results and bring the best experience for customers and users. <br>
+                    <br>
+                    Mais de 1 ano de experiência em desenvolvimento front end, minha paixão é entregar as melhores soluções e mais valor para cada software e projeto do qual participo. 
+                    Sou um profissional de aprendizado contínuo, buscando aprimorar minhas habilidades no que há de novo no desenvolvimento de software. Sempre entregando resultados e trazendo a melhor experiência para clientes e usuários. <br>
                 </p>
-                <a href="https://drive.google.com/file/d/1xloTIy98Bdbj4mNUhcyav5ygpHjddbFg/view?usp=sharing" target="__blank">Curriculum</a>
-                <a href="https://drive.google.com/drive/folders/1dO0Rv2O-jyYhEn9oiZPY8XOL7l_wPX3H?usp=sharing" target="__blank">Certificates</a>
+                <a href="https://drive.google.com/drive/folders/1dO0Rv2O-jyYhEn9oiZPY8XOL7l_wPX3H?usp=sharing" target="__blank">Certifications</a>
             </div>
             <div class="w50">
                 <img src="img/img.jpg" class="img">
