--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <span></span>
                 <div class="content">
                     <h2>05</h2>
-                    <h3>E-commerce</h3>
+                    <h3>Rental Company</h3>
                     <p>API developed to perform the main actions of a car rental company, such as registration and
                         listing of vehicles.
                     </p>
